--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <title>Projeto Travelgra,</title>
 </head>
 <body>
-    
+    <div class="bg-surface-color">
+        <nav class="container"> 
+            <a href=""><img src="./Assets/icons/Logo.svg" alt="logomarca da travel viagens na cor vermelha"></a>
+            <ul>
+                <li><a href="#"><img src="./Assets/icons/MagnifyingGlass.svg"
+                            alt="imagem de uma lupa para realizar pesquisas dentro da página"></a></li>
+                <li><a href="#">Explorar</a></li>
+                <li><a href="#">Minhas viagens</a></li>
+                <li><a href="#"><img src="./Assets/Profile pic.jpg" alt="imagen da isabela Torres"></a></li>
+            </ul>
+        </nav>
+    </div>
+    <header>
+
+    </header>
 </body>
 </html>
