--- a/index.html
+++ b/index.html
@@ -23,9 +23,34 @@
                 <li><a href="#"><img src="./Assets/Profile pic.jpg" alt="imagen da isabela Torres"></a></li>
             </ul>
         </nav>
+        <header>
+            <div class="container">
+                <div id="profile">
+                    <img src="./Assets/Profile pic.jpg" alt="Iagem da isabela Torres">
+                    <div>
+                        <h1>Isabela Torres</h1>
+                        <p>Amante de viagens, cultura e gastronomia. 🌍✈️<br>
+                            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso
+                            planeta a partir da
+                            movimentada cidade de São Paulo. 🏙️📸</p>
+                    </div>
+                </div>
+                <ul id="infos">
+                    <li>
+                        <img src="/Assets/icons/MapPin.svg" alt="icone de um mapa">
+                        <span>São Paulo, Brazil</span>
+                    </li>
+                    <li>
+                        <img src="/Assets/icons/AirplaneTilt.svg" alt="icone de um avião">
+                        <span>37 países</span>
+                    </li>
+                    <li>
+                        <img src="/Assets/icons/Image.svg" alt="icone de um retrato">
+                        <span>240 fotos</span>
+                    </li>
+                </ul>
+                </div>
+                </header>
     </div>
-    <header>
-
-    </header>
 </body>
 </html>
