--- a/index.html
+++ b/index.html
@@ -49,8 +49,22 @@
                         <span>240 fotos</span>
                     </li>
                 </ul>
-                </div>
-                </header>
+            </div>
+            </header>
     </div>
+    <main class="container">
+        <img src="/Assets/images/Image 01.png" alt="Barco andando em um lago com uma montanha de fundo">
+        <img src="/Assets/images/Image 02.png" alt="Imagem de diversos barcos em Veneza ao por do sol">
+        <img src="/Assets/images/Image 03.png" alt="Imagem de alguns barco e uma ponte com diversas pessoas ao fundo">
+        <img src="/Assets/images/Image 04.png" alt="...">
+        <img src="/Assets/images/Image 05.png" alt="...">
+        <img src="/Assets/images/Image 06.png" alt="...">
+        <img src="/Assets/images/Image 07.png" alt="...">
+        <img src="/Assets/images/Image 08.png" alt="...">
+        <img src="/Assets/images/Image 09.png" alt="...">
+        <img src="/Assets/images/Image 10.png" alt="...">
+        <img src="/Assets/images/Image 11.png" alt="...">
+        <img src="/Assets/images/Image 12.png" alt="...">
+    </main>
 </body>
 </html>
