--- a/index.html
+++ b/index.html
@@ -66,5 +66,13 @@
         <img src="/Assets/images/Image 11.png" alt="...">
         <img src="/Assets/images/Image 12.png" alt="...">
     </main>
+
+    <footer class="container">
+        <p>Travelgram © 2024</p>
+        <ul>
+            <li><a href="#">Termos de uso</a></li>
+            <li><a href="#">Política de privacidade</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
