--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </main>
 
     <footer class="container">
-        <p>Travelgram © 2024</p>
+        <p>Travelgram &copy; 2024</p>
         <ul>
             <li><a href="#">Termos de uso</a></li>
             <li><a href="#">Política de privacidade</a></li>
